[gd_scene load_steps=5 format=3 uid="uid://td3mudn3ntgw"]

[ext_resource type="Script" path="res://src/gun/GunComponent.gd" id="1_s3pyl"]
[ext_resource type="Script" path="res://src/global/ObjectPool.gd" id="2_igmfi"]
[ext_resource type="PackedScene" uid="uid://bk3scw1w2hue1" path="res://src/gun/Projectile.tscn" id="3_xr3kd"]

[sub_resource type="CircleShape2D" id="8"]
radius = 3.0

[node name="GunComponent" type="Node2D"]
script = ExtResource("1_s3pyl")
projectile_speed = 200

[node name="ProjectilePool" type="Node" parent="."]
script = ExtResource("2_igmfi")
object_scene = ExtResource("3_xr3kd")

[node name="ProjectileStart" type="Marker2D" parent="."]
position = Vector2(7, 0)

[node name="ProjectileTarget" type="Marker2D" parent="."]
position = Vector2(20, 0)

[node name="Area3D" type="Area2D" parent="ProjectileTarget"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ProjectileTarget/Area3D"]
shape = SubResource("8")
